Add first row of merchandise

--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,12 @@
 .ihv-three:hover {
     content: url("./images/reddress_2.jpg");
 }
+
+/* Image Four */
+.card-img-top-four {
+    content: url("./images/grey_1.jpg");
+    height: 100%;
+}
+.ihv-four:hover {
+    content: url("./images/grey_2.jpg");
+}
